[package]
name = "elexeum-runtime-metrics"
version = "0.2.1"
authors = ["Elexeum <info@elexeum.org>"]
edition = "2018"

[dependencies]
sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.16", default-features = false}
parity-scale-codec = { version = "2.3.1", default-features = false }
primitives = { package = "elexeum-primitives", path = "../../primitives", default-features = false }

bs58 = { version = "0.4.0", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-tracing/std",
    "parity-scale-codec/std",
    "primitives/std",
    "bs58/std"
]
runtime-metrics = ["sp-tracing/with-tracing"]
