[package]
name = "elexeum-statement-table"
version = "0.2.1"
authors = ["Elexeum <info@elexeum.xyz>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
primitives = { package = "elexeum-primitives", path = "../../primitives" }
