[package]
name = "elexeum-overseer-gen"
version = "0.2.1"
authors = ["Elexeum <info@elexeum.org>"]
edition = "2018"
description = "Generate an overseer including builder pattern and message wrapper from a single struct."

[dependencies]
tracing = "0.1"
futures = "0.3"
async-trait = "0.1"
thiserror = "1"
metered = { package = "metered-channel", path = "../../metered-channel" }
elexeum-overseer-gen-proc-macro = { path = "./proc-macro" }
elexeum-node-network-protocol = { path = "../../network/protocol"}
# trait SpawnNamed
elexeum-node-primitives = { path = "../../primitives" }
futures-timer = "3.0.2"
pin-project = "1.0"

[dev-dependencies]
trybuild = "1.0.53"
