[package]
name = "elexeum-primitives-test-helpers"
version = "0.2.1"
authors = ["Elexeum <info@elexeum.xyz>"]
edition = "2021"

[dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-application-crypto = { package = "sp-application-crypto", git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.16", default-features = false}
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
elexeum-primitives = { path = "../" }
