[package]
name = "elexeum-node-collation-generation"
version = "0.2.1"
authors = ["Elexeum <info@elexeum.xyz>"]
edition = "2018"

[dependencies]
futures = "0.3.19"
tracing = "0.1.29"
elexeum-erasure-coding = { path = "../../modules/erasure-coding" }
elexeum-node-primitives = { path = "../primitives" }
elexeum-node-subsystem = { path = "../subsystem" }
elexeum-node-subsystem-util = { path = "../subsystem-util" }
elexeum-primitives = { path = "../../primitives" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-maybe-compressed-blob  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
thiserror = "1.0.30"
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["bit-vec", "derive"] }

[dev-dependencies]
elexeum-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
test-helpers = { package = "elexeum-primitives-test-helpers", path = "../../primitives/test-helpers" }
