[package]
name = "elexeum-overseer"
version = "0.2.1"
authors = ["Elexeum <info@elexeum.xyz>"]
edition = "2018"

[dependencies]
client = { package = "sc-client-api", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
futures = "0.3.19"
futures-timer = "3.0.2"
parking_lot = "0.11.1"
elexeum-node-network-protocol = { path = "../network/protocol" }
elexeum-node-primitives = { path = "../primitives" }
elexeum-node-subsystem-types = { path = "../subsystem-types" }
elexeum-node-metrics = { path = "../metrics" }
elexeum-primitives = { path = "../../primitives" }
elexeum-overseer-gen = { path = "./overseer-gen" }
tracing = "0.1.29"
lru = "0.7"
parity-util-mem = { version = ">= 0.10.1", default-features = false }

[dev-dependencies]
metered-channel = { path = "../metered-channel" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
futures = { version = "0.3.19", features = ["thread-pool"] }
femme = "2.1.1"
assert_matches = "1.4.0"
test-helpers = { package = "elexeum-primitives-test-helpers", path = "../../primitives/test-helpers" }

[features]
default = []
