[package]
name = "elexeum-node-subsystem-types"
version = "0.2.1"
authors = ["Elexeum <info@elexeum.org>"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
derive_more = "0.99.17"
futures = "0.3.19"
elexeum-primitives = { path = "../../primitives" }
elexeum-node-primitives = { path = "../primitives" }
elexeum-node-network-protocol = { path = "../network/protocol" }
elexeum-statement-table = { path = "../../modules/statement-table" }
elexeum-node-jaeger = { path = "../jaeger" }
elexeum-overseer-gen = { path = "../overseer/overseer-gen" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
smallvec = "1.6.1"
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
thiserror = "1.0.30"
