[package]
name = "elexeum-node-subsystem-util"
version = "0.2.1"
authors = ["Elexeum <info@elexeum.xyz>"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
async-trait = "0.1.52"
futures = "0.3.19"
itertools = "0.10"
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
pin-project = "1.0.9"
rand = "0.8.3"
thiserror = "1.0.30"
tracing = "0.1.29"
derive_more = "0.99.17"
lru = "0.7.2"

elexeum-node-subsystem = { package = "elexeum-node-subsystem", path = "../subsystem" }
elexeum-node-jaeger = { path = "../jaeger" }
elexeum-node-metrics = { path = "../metrics" }
elexeum-node-network-protocol = { path = "../network/protocol" }
elexeum-primitives = { path = "../../primitives" }
elexeum-node-primitives = { path = "../primitives" }
elexeum-overseer = { path = "../overseer" }
metered-channel = { path = "../metered-channel" }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

[dev-dependencies]
assert_matches = "1.4.0"
env_logger = "0.9.0"
futures = { version = "0.3.19", features = ["thread-pool"] }
log = "0.4.13"
elexeum-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
lazy_static = "1.4.0"
elexeum-primitives-test-helpers = { path = "../../primitives/test-helpers" }

