[package]
name = "xcm-simulator"
version = "0.2.1"
authors = ["Elexeum <info@elexeum.xyz>"]
description = "Test kit to simulate cross-chain message passing and XCM execution"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
paste = "1.0.6"

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

xcm = { path = "../" }
xcm-executor = { path = "../xcm-executor" }
elexeum-core-primitives = { path = "../../../primitives/core-primitives"}
elexeum-parachain = { path = "../../parachain" }
elexeum-runtime-parachains = { path = "../../parachain/runtime" }
