[package]
name = "elexeum-node-core-av-store"
version = "0.2.1"
authors = ["Elexeum <info@elexeum.xyz>"]
edition = "2018"

[dependencies]
futures = "0.3.19"
futures-timer = "3.0.2"
kvdb = "0.10.0"
thiserror = "1.0.30"
tracing = "0.1.29"
bitvec = "0.20.1"

parity-scale-codec = { version = "2.3.1", features = ["derive"] }
erasure = { package = "elexeum-erasure-coding", path = "../../../modules/erasure-coding" }
elexeum-subsystem = { package = "elexeum-node-subsystem", path = "../../subsystem" }
elexeum-node-subsystem-util = { path = "../../subsystem-util" }
elexeum-overseer = { path = "../../overseer" }
elexeum-primitives = { path = "../../../primitives" }
elexeum-node-primitives = { path = "../../primitives" }

[dev-dependencies]
log = "0.4.13"
env_logger = "0.9.0"
assert_matches = "1.4.0"
kvdb-memorydb = "0.10.0"

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
elexeum-node-subsystem-util = { path = "../../subsystem-util" }
elexeum-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
parking_lot = "0.11.1"
test-helpers = { package = "elexeum-primitives-test-helpers", path = "../../../primitives/test-helpers" }
