[package]
name = "elexeum-node-core-backing"
version = "0.2.1"
authors = ["Elexeum <info@elexeum.xyz>"]
edition = "2018"

[dependencies]
futures = "0.3.19"
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
elexeum-primitives = { path = "../../../primitives" }
elexeum-node-primitives = { path = "../../primitives" }
elexeum-subsystem = { package = "elexeum-node-subsystem", path = "../../subsystem" }
elexeum-node-subsystem-util = { path = "../../subsystem-util" }
erasure-coding = { package = "elexeum-erasure-coding", path = "../../../modules/erasure-coding" }
statement-table = { package = "elexeum-statement-table", path = "../../../modules/statement-table" }
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
tracing = "0.1.29"
thiserror = "1.0.30"

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
futures = { version = "0.3.19", features = ["thread-pool"] }
assert_matches = "1.4.0"
elexeum-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
test-helpers = { package = "elexeum-primitives-test-helpers", path = "../../../primitives/test-helpers" }
