[package]
name = "elexeum-node-core-chain-selection"
description = "Chain Selection Subsystem"
version = "0.2.1"
authors = ["Elexeum <info@elexeum.xyz>"]
edition = "2018"

[dependencies]
futures = "0.3.19"
futures-timer = "3"
tracing = "0.1.29"
elexeum-primitives = { path = "../../../primitives" }
elexeum-node-primitives = { path = "../../primitives" }
elexeum-node-subsystem = { path = "../../subsystem" }
elexeum-node-subsystem-util = { path = "../../subsystem-util" }
kvdb = "0.10.0"
thiserror = "1.0.30"
parity-scale-codec = "2"

[dev-dependencies]
elexeum-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
parking_lot = "0.11"
assert_matches = "1"
kvdb-memorydb = "0.10.0"
