[package]
name = "elexeum-node-core-dispute-coordinator"
version = "0.2.1"
authors = ["Elexeum <info@elexeum.xyz>"]
edition = "2018"

[dependencies]
futures = "0.3.19"
tracing = "0.1.29"
parity-scale-codec = "2"
kvdb = "0.10.0"
thiserror = "1.0.30"
lru = "0.7.2"

elexeum-primitives = { path = "../../../primitives" }
elexeum-node-primitives = { path = "../../primitives" }
elexeum-node-subsystem = { path = "../../subsystem" }
elexeum-node-subsystem-util = { path = "../../subsystem-util" }

sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

[dev-dependencies]
kvdb-memorydb = "0.10.0"
elexeum-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
assert_matches = "1.4.0"
test-helpers = { package = "elexeum-primitives-test-helpers", path = "../../../primitives/test-helpers" }

[features]
# If not enabled, the dispute coordinator will do nothing.
disputes = []
