[package]
name = "elexeum-node-core-parachains-inherent"
version = "0.2.1"
authors = ["Elexeum <info@elexeum.xyz>"]
edition = "2018"

[dependencies]
futures = "0.3.19"
futures-timer = "3.0.2"
tracing = "0.1.29"
thiserror = "1.0.30"
async-trait = "0.1.52"
elexeum-node-subsystem = { path = "../../subsystem" }
elexeum-primitives = { path = "../../../primitives" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
