[package]
name = "elexeum-node-core-provisioner"
version = "0.2.1"
authors = ["Elexeum <info@elexeum.xyz>"]
edition = "2018"

[dependencies]
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
futures = "0.3.19"
tracing = "0.1.29"
thiserror = "1.0.30"
elexeum-primitives = { path = "../../../primitives" }
elexeum-node-primitives = { path = "../../primitives" }
elexeum-node-subsystem = { path = "../../subsystem" }
elexeum-node-subsystem-util = { path = "../../subsystem-util" }
futures-timer = "3.0.2"
rand = "0.8.4"

[dev-dependencies]
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
elexeum-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
test-helpers = { package = "elexeum-primitives-test-helpers", path = "../../../primitives/test-helpers" }
