[package]
name = "elexeum-node-core-runtime-api"
version = "0.2.1"
authors = ["Elexeum <info@elexeum.xyz>"]
edition = "2018"

[dependencies]
futures = "0.3.19"
tracing = "0.1.29"
memory-lru = "0.1.0"
parity-util-mem = { version = "0.10.0", default-features = false }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

elexeum-primitives = { path = "../../../primitives" }
elexeum-subsystem = { package = "elexeum-node-subsystem", path = "../../subsystem" }
elexeum-node-subsystem-util = { path = "../../subsystem-util" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
futures = { version = "0.3.19", features = ["thread-pool"] }
elexeum-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
elexeum-node-primitives = { path = "../../primitives" }
test-helpers = { package = "elexeum-primitives-test-helpers", path = "../../../primitives/test-helpers" }
