[package]
name = "elexeum-approval-distribution"
version = "0.2.1"
authors = ["Elexeum <info@elexeum.xyz>"]
edition = "2018"

[dependencies]
elexeum-node-primitives = { path = "../../primitives" }
elexeum-node-network-protocol = { path = "../protocol" }
elexeum-node-subsystem = { path = "../../subsystem" }
elexeum-node-subsystem-util = { path = "../../subsystem-util" }
elexeum-primitives = { path = "../../../primitives" }

futures = "0.3.19"
tracing = "0.1.29"

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", features = ["std"] , branch = "polkadot-v0.9.16" }

elexeum-node-subsystem-util = { path = "../../subsystem-util" }
elexeum-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }

assert_matches = "1.4.0"
schnorrkel = { version = "0.9.1", default-features = false }
rand_core = "0.5.1" # should match schnorrkel
env_logger = "0.9.0"
log = "0.4.13"
