[package]
name = "elexeum-collator-protocol"
version = "0.2.1"
authors = ["Elexeum <info@elexeum.xyz>"]
edition = "2018"

[dependencies]
always-assert = "0.1.2"
derive_more = "0.99.17"
futures = "0.3.19"
futures-timer = "3"
thiserror = "1.0.30"
tracing = "0.1.29"

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

elexeum-primitives = { path = "../../../primitives" }
elexeum-node-network-protocol = { path = "../../network/protocol" }
elexeum-node-primitives = { path = "../../primitives" }
elexeum-node-subsystem-util = { path = "../../subsystem-util" }
elexeum-subsystem = { package = "elexeum-node-subsystem", path = "../../subsystem" }

[dev-dependencies]
log = "0.4.13"
env_logger = "0.9.0"
assert_matches = "1.4.0"

sp-core = { git = "https://github.com/paritytech/substrate", features = ["std"] , branch = "polkadot-v0.9.16" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
parity-scale-codec = { version = "2.3.1", features = ["std"]  }

elexeum-subsystem-testhelpers = { package = "elexeum-node-subsystem-test-helpers", path = "../../subsystem-test-helpers" }
elexeum-primitives-test-helpers = { path = "../../../primitives/test-helpers" }
